force-app/main/default/objects/Reference_Member__c/Reference_Member__c.object-meta.xml
<CustomObject>
    <label>Reference/Member</label>
    <nameField>
        <displayFormat>RM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference/Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>