force-app/main/default/objects/Reference_Member__c/fields/BL_Relationship_with_Applicant__c.field-meta.xml
<CustomField>
    <fullName>BL_Relationship_with_Applicant__c</fullName>
    <label>Relationship with Applicant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Children(Male Children Only)</fullName>
            </value>
            <value>
                <fullName>Sibling(Except Sister)</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>