force-app/main/default/objects/Reference_Member__c/fields/BL_Telephone__c.field-meta.xml
<CustomField>
    <fullName>BL_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>