force-app/main/default/objects/Reference_Member__c/fields/KYC_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Document_Type__c</fullName>
    <label>KYC Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Driving Licence</fullName>
            </value>
            <value>
                <fullName>Voter Identity Card</fullName>
            </value>
            <value>
                <fullName>MNREGA Job Card</fullName>
            </value>
            <value>
                <fullName>National Population Register (NPR)</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>