force-app/main/default/objects/Reference_Member__c/fields/Loan_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Applicant_Name__c</fullName>
    <formula>Loan_Applicant__r.Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Applicant Name</label>
    <type>Text</type>
</CustomField>