force-app/main/default/objects/Reference_Member__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Reference/Members</relationshipLabel>
    <relationshipName>Reference_Members</relationshipName>
    <type>Lookup</type>
</CustomField>