force-app/main/default/objects/Reference_Member__c/fields/Loan_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_Name__c</fullName>
    <formula>Loan_Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Application Name</label>
    <type>Text</type>
</CustomField>