force-app/main/default/objects/Reference_Member__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pincode</label>
    <referenceTo>Pincode__c</referenceTo>
    <relationshipLabel>Reference/Members</relationshipLabel>
    <relationshipName>Reference_Members</relationshipName>
    <type>Lookup</type>
</CustomField>