force-app/main/default/objects/Reference_Member__c/fields/Pincode_Name__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Name__c</fullName>
    <formula>Pincode__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pincode Name</label>
    <type>Text</type>
</CustomField>