force-app/main/default/objects/Reference_Member__c/fields/Reference_Address__c.field-meta.xml
<CustomField>
    <fullName>Reference_Address__c</fullName>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>