force-app/main/default/objects/Reference_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorised Signatory</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Directo</fullName>
            </value>
            <value>
                <fullName>Trustee</fullName>
            </value>
            <value>
                <fullName>HUF Member</fullName>
            </value>
            <value>
                <fullName>Trade References</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>