force-app/main/default/objects/Reference_Member__c/fields/Type_of_Profession_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Profession_Name__c</fullName>
    <label>Type of Profession Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>