force-app/main/default/objects/Reference_Member__c/recordTypes/Members.recordType-meta.xml
<RecordType>
    <fullName>Members</fullName>
    <active>true</active>
    <label>Members</label>
</RecordType>