force-app/main/default/objects/Reference_Member__c/recordTypes/Trade_References.recordType-meta.xml
<RecordType>
    <fullName>Trade_References</fullName>
    <active>true</active>
    <label>Trade References</label>
</RecordType>