force-app/main/default/objects/Reference_Member__c/validationRules/Only_for_non_individual_customers.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_for_non_individual_customers</fullName>
    <active>true</active>
    <errorConditionFormula>IF(   AND(ISNEW(),  Loan_Applicant__r.Record_Type_Name__c = &apos;Individual&apos; ) , true, false)</errorConditionFormula>
    <errorMessage>References/Members can be added only for Non-Individual customers.</errorMessage>
</ValidationRule>